@@ -1,0 +1,7 @@
+= Examples
+
+link:isutf8.rs[]::
+  An example that returns `sysexits::ExitCode`.
+
+link:cat.rs[]::
+  An example that returns `std::process::ExitCode`.
