@@ -17,6 +17,7 @@ toc::[]
 === Added
 
 * Implement `Display` trait and corresponding test ({pull-request-url}/1[#1])
+* Add the example that returns `sysexits::ExitCode`
 
 == {compare-url}/v0.2.1\...v0.2.2[0.2.2] - 2022-06-04
 
